FILE(GLOB CONSOLEAPP_HEADER_FILES "*.h")
GET_FILENAME_COMPONENT(CONSOLEAPP_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME )
FILE(GLOB CONSOLEAPP_PUBLIC_HEADER_FILES "${WXMATROSKA_INCLUDE_DIR}/${CONSOLEAPP_DIR_NAME}/*.h")
SET(CONSOLEAPP_SOURCE_FILES
	MyAppConsole.cpp
	MyAppTraits.cpp
	MyConfiguration.cpp
)

ADD_LIBRARY(wxConsoleApp
	${CONSOLEAPP_SOURCE_FILES}
	${CONSOLEAPP_HEADER_FILES}
	${CONSOLEAPP_PUBLIC_HEADER_FILES}
)

TARGET_PRECOMPILE_HEADERS(wxConsoleApp PRIVATE StdWx.h)
TARGET_INCLUDE_DIRECTORIES(wxConsoleApp PRIVATE ${WXMATROSKA_INCLUDE_DIR})
TARGET_COMPILE_OPTIONS(wxConsoleApp PRIVATE "$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
SET_PROPERTY(TARGET wxConsoleApp PROPERTY FOLDER "cli")