FILE(GLOB CONSOLEAPP_HEADER_FILES "*.h")
GET_FILENAME_COMPONENT(CONSOLEAPP_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME )
FILE(GLOB CONSOLEAPP_PUBLIC_HEADER_FILES "${WXMATROSKA_INCLUDE_DIR}/${CONSOLEAPP_DIR_NAME}/*.h")
SET(CONSOLEAPP_SOURCE_FILES
	MyAppConsole.cpp
	MyAppTraits.cpp
	MyConfiguration.cpp
)

ADD_LIBRARY(wxConsoleApp STATIC
	${CONSOLEAPP_SOURCE_FILES}
	${CONSOLEAPP_HEADER_FILES}
	${CONSOLEAPP_PUBLIC_HEADER_FILES}
)

ConfigureWxMatroska(wxConsoleApp)
ConfigureWxWidgetsUsage(wxConsoleApp)
ConfigureSourceEncoding(wxConsoleApp)
SET_PROPERTY(TARGET wxConsoleApp PROPERTY OUTPUT_NAME ConsoleApp)
SET_PROPERTY(TARGET wxConsoleApp PROPERTY FOLDER "cli")